Added google client ID

--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@ table.acct-tbl{width:100%;border-collapse:collapse;font-size:12px}
 /* ══════════════════════════════════════════════
    ▶ CONFIG — set your Client ID once here
 ══════════════════════════════════════════════ */
-const GOOGLE_CLIENT_ID = 'YOUR_CLIENT_ID_HERE.apps.googleusercontent.com';
+const GOOGLE_CLIENT_ID = '556868937449-mc08d7g147b7sing51as61cqrmrp2h9m.apps.googleusercontent.com';
 // ^ paste your OAuth Client ID above — teammates never need to touch this
 
 /* ══════════════════════════════════════════════
